# stand-reminder

./: .gitignore  LICENSE  README.md  index.html  package.json  plan.md  pnpm-lock.yaml
src/: App.css  App.tsx  SettingsView.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  modal.rs  settings.rs  sound.rs  state.rs  timer.rs  tray.rs
