[package]
name = "stand-reminder"
version = "0.1.4"
description = "macOS menu bar app to remind you to stand up and avoid sitting too long"
authors = ["shintarou-akao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stand_reminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
chrono = "0.4"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSSound"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
